@@ -7,6 +7,7 @@ import org.springframework.beans.PropertyAccessorFactory;
 
 import java.beans.PropertyDescriptor;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 public abstract class BeanUtil {
@@ -28,17 +29,17 @@ public abstract class BeanUtil {
         if (sources != null) {
             try {
                 for (Object source : sources) {
-                    T target = clazz.newInstance();
+                    T target = clazz.getDeclaredConstructor().newInstance();
                     copyProperties(source, target);
                     if (callback != null) {
                         callback.set(source, target);
                     }
                     targetList.add(target);
                 }
-            } catch (InstantiationException e) {
+            } catch (InstantiationException | IllegalAccessException e) {
                 e.printStackTrace();
-            } catch (IllegalAccessException e) {
-                e.printStackTrace();
+            } catch (InvocationTargetException | NoSuchMethodException e) {
+                throw new RuntimeException(e);
             }
         }
         return targetList;
@@ -68,7 +69,7 @@ public abstract class BeanUtil {
         return (T) beanWrapper.getWrappedInstance();
     }
 
-    public static interface Callback<T> {
+    public interface Callback<T> {
         void set(Object source, T target);
     }
 
